--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = list(countries)-setunique_countries\n",
+    "num_of_repeats = list(countries)-unique_countries\n",
     "num_of_repeats # 3"
    ]
   },
