Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,16 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -456,19 +456,19 @@
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
+       "['USA',\n",
        " 'Mexico',\n",
+       " 'Finland',\n",
        " 'Morocco',\n",
+       " 'Croatia',\n",
        " 'New Mexico',\n",
+       " 'Canada',\n",
        " 'South Korea',\n",
-       " 'USA'}"
+       " 'Italy',\n",
+       " 'Argentina']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
